# WDFWatch

./: .env.example  .env.production.example  .env.wdfwatch.example  .gitignore  .vpxignore  .wdfwatch_token_info.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DIAGNOSIS_AND_FIX.md  Dockerfile  ENV_SETUP.md  EXPORT_FOR_MIGRATION.sh  FIX_MIGRATION.sh  IMPROVEMENTS.md  MIGRATION_GUIDE.md  Makefile  QUICKSTART.md  README.md  VPS_SETUP_GUIDE.md  analyze_failures.js  analyze_queue_status.js  check_migration_issues.sh  check_oauth_token.py  check_queue.js  classify_tweets.py  create_clean_repo.sh  debug_episode_manager.py  debug_simple.py  docker-compose.prod.yml  docker-compose.public.yml  docker-compose.yml  evaluate_classifier.py  execute_claude_stage.sh  fewshot_generator.py  gemini-tweet-examples.js  gemini_summarize.js  generate_oauth1_tokens.py  import_episode_data.py  install-docker.sh  (+27 more)
.serena/: project.yml
backend/api/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
backend/api/app/: config.py  main.py
backend/api/app/models/: requests.py  responses.py
backend/api/app/routes/: episodes.py  events.py  health.py  queue.py  settings.py  tweets.py
backend/api/app/services/: claude_cli.py  db.py  episodes_repo.py  events.py  metrics.py  pipeline.py  pipeline_cache.py  queue.py  retry.py  tweet_queue.py
backend/api/app/utils/: logging.py  performance.py
backend/api/app/workers/: __init__.py  jobs.py  worker.py
claude-classifier/: CLAUDE.md  classify.py  compare.py  episode_memory.py
claude-moderator/: CLAUDE.md
claude-pipeline/: .temp_prompt_classify_1755880699.txt  .temp_prompt_classify_1755882304.txt  CLAUDE.md  EPISODE_STRUCTURE.md  HYBRID_CONTEXT_GUIDE.md  README.md  generate_sample_tweets.py  minimal-mcp-config.json  orchestrator.py  pipeline_results_14.json  scrape_direct.py  simple_prompt.txt  single_tweet.py  test.txt  test_classified.json  test_fix.py  test_mode_prompt.txt  test_simplified_response.py  test_with_mode.txt  web_bridge.py
claude-summarizer/: CLAUDE.md  summarize.py
claude-tweet-responder/: CLAUDE.md  claude-response.py
config/: safe_defaults.json
docs/: API-Stage-Configuration.md  CLAUDE_INTEGRATION.md  Claude-Pipeline-Flow-Analysis.md  EPISODE_FILE_MANAGEMENT.md  OAUTH2_SETUP.md  PRD.md  PROMPT_MANAGEMENT.md  Relevant-URLs.txt  SEARCH_BOUNDARIES.md  SEARCH_STRATEGY.md  SETUP.md  TWEET_GATHERING_IMPROVEMENTS.md  TWITTER_API_SETUP.md  User-Guide-Stage-Configuration.md  chat_template.txt
episodes/: current
(+426 files in other folders)
