[tool.poetry]
name = "wdf-pipeline"
version = "1.0.0"
description = "WDF Podcast Social-Engagement Pipeline"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "wdf", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
prefect = "^2.14.10"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"
redis = "^5.0.1"
ollama = "^0.1.6"
watchdog = "^3.0.0"
rich = "^13.7.0"
psycopg2-binary = "^2.9.9"
aiohttp = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-xdist = "^3.3.1"
pytest-snapshot = "^0.9.0"
deepdiff = "^6.7.1"
mypy = "^1.7.1"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I", "N", "UP", "ANN", "S", "A", "C4", "T20", "PT", "RET", "SIM", "ARG"]
ignore = ["ANN101", "ANN102", "ANN401", "E501"]

[tool.ruff.isort]
known-first-party = ["wdf"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.wdf_pipeline]
transcript_dir = "transcripts"
ollama_host = "http://ollama:11434"
prefect_workspace = "wdf-prod"
mock_mode = true

[tool.wdf_pipeline.llm_models]
gemini = "gemini-2.5-pro"
gemma = "gemma3n:e4b"
deepseek = "deepseek-r1:latest" 